--- a/src/main/java/GUI/EmployeeGUI.form
+++ b/src/main/java/GUI/EmployeeGUI.form
@@ -128,7 +128,7 @@
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
                           <Component id="update" min="-2" max="-2" attributes="0"/>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
-                          <Component id="jButton3" min="-2" max="-2" attributes="0"/>
+                          <Component id="delete_btn" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace min="-2" pref="137" max="-2" attributes="0"/>
@@ -162,7 +162,7 @@
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="create" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="update" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jButton3" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="delete_btn" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="33" max="-2" attributes="0"/>
               </Group>
@@ -220,11 +220,17 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Cap Nhat"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="updateActionPerformed"/>
+          </Events>
         </Component>
-        <Component class="javax.swing.JButton" name="jButton3">
+        <Component class="javax.swing.JButton" name="delete_btn">
           <Properties>
             <Property name="text" type="java.lang.String" value="Xoa"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="delete_btnActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JComboBox" name="gender_cbx">
           <Properties>
